--- a/spring-2015-msan622/index.html
+++ b/spring-2015-msan622/index.html
@@ -62,7 +62,7 @@
 <h3><a id="homework-submissions" class="anchor" href="#homework-submissions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Homework Submissions</h3>
 <p>
 <div><a href="homework1.html?hellothere!">Homework 1</a></div>
-<div><a href="#">Homework 2</a></div>
+<div><a href="homework1.html">Homework 2</a></div>
 <div><a href="#">Homework 3</a></div>
 <div><a href="#">Homework 4</a></div>
 <div><a href="#">Homework 5</a></div>
